# kiyomi

./: .dockerignore  .env  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .graphqlrc.json  .prettierrc  Dockerfile  README.md  codegen.yaml  colors.js  docker-compose.yaml  next-env.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ansible/: ansible.cfg  hosts.yaml  playbook.yaml
client/: .gitignore  Dockerfile  codegen.yaml  package.json  remix.env.d.ts  tsconfig.json  type.d.ts
components/: footer.tsx  front-page.tsx  gallery.tsx  hr.tsx  image-display.tsx  image-edit-modal.tsx  image-sidebar.tsx  navbar.tsx  palette-color.tsx  person-preview.tsx  tags.tsx  upload.tsx  user.tsx
database/: postgresErrorCode.enum.ts
game/: Dockerfile  LICENSE  README.md  etsc.config.js  nodemon.json  package.json  tsconfig.json
hooks/: useImageSlice.ts
kube/: load-balancer.yaml
labeler/: .env  .gitignore  Dockerfile  README.md  codegen.yaml  colors.py  etsc.config.js  nodemon.json  package.json  phash.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
labeler/.github/workflows/: main.yml
labeler/labeler/: colors.py  data.py  face.py  labeling.py  main.py  phash.py
labeler/src/: config.ts  face-recognition.ts  ffi.ts  index.ts  phash.ts  test.ts  types.d.ts
labeler/src/__generated__/: request.ts
labeler/src/queries/: image.graphql  upload-faces.graphql
labeler/src_old/: config.ts  face-recognition.ts  ffi.ts  index.ts  types.d.ts
lib/: amqp.ts  apollo.ts  auth.ts  client-helpers.ts  context.ts  db.ts  (+9 more)
(+742 files in other folders)
